testsuite/tests/typecheck/should_fail/tcfail004.hs
module ShouldFail where

(f,g) = (1,2,3)
