testsuite/tests/typecheck/should_fail/tcfail004.stderr

tcfail004.hs:3:1: error: [GHC-83865]
    • Couldn't match expected type: (a0, b0, c0)
                  with actual type: (a, b)
    • In the pattern: (f, g)
      In a pattern binding: (f, g) = (1, 2, 3)
